# savant

./: .gitIgnore  LICENSE  README.md  package-lock.json
frontend/: .env.template  .eslintrc.json  README.md  package-lock.json  package.json  tsconfig.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx
frontend/src/components/: appBar.tsx  codeBlock.tsx  conversation.tsx  (+17 more)
pyServer/: .env.template  README.md  main.py  pyproject.toml
pyServer/.chroma/index/: id_to_uuid_2378901d-9cb0-4e1c-bfba-2582af5fe176.pkl  id_to_uuid_b3be8ff6-7525-4561-8110-5495a6f19648.pkl  index_metadata_2378901d-9cb0-4e1c-bfba-2582af5fe176.pkl  index_metadata_b3be8ff6-7525-4561-8110-5495a6f19648.pkl  uuid_to_id_2378901d-9cb0-4e1c-bfba-2582af5fe176.pkl  uuid_to_id_b3be8ff6-7525-4561-8110-5495a6f19648.pkl
pyServer/server/: __init__.py
pyServer/server/langchain/callbacks/: console_callback_handler.py  streaming_callback_handler.py
pyServer/server/routes/collections/: routes.py  service.py
pyServer/server/routes/documents/: routes.py  service.py
pyServer/server/routes/interact/: routes.py  service.py
pyServer/server/routes/models/: routes.py  service.py
pyServer/server/routes/question/: routes.py
pyServer/server/save_temp_files/: ardanis_Job_Brief.txt  prompts_-_Copy_-_Copy.rtf
pyServer/server/services/: loaders.py  request_service.py  vector_store.py
pyServer/server/socket/: question.py
pyServer/server/utils/: parse.py
server/: .env.template  .eslintrc.json  README.md  package-lock.json  package.json  tsconfig.json
server/src/: loaders.ts  server.ts  uploadDocuments.ts
(+61 files in other folders)
