[tool.poetry]
name = "savantpy"
version = "0.1.0"
description = ""
authors = ["jc.durbin <jc.durbin@ardanis.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
chromadb = "^0.3.23"

yachalk = "^0.1.5"
openai = "^0.27.7"
langchain = "^0.0.177"
flask-cors = "^3.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
